--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -8,15 +8,16 @@
     font-size: 1.5rem;
 
     .logo {
-        width: 15%;
+        width: 20%;
         margin: 10px;
     }
 
     .menu {
-        display: flex;
-        align-items: center;
-        padding-right: 50px;
-
+      display: flex;
+      align-items: center;
+      justify-content: right;
+      padding-right: 1.2rem;
+      width: 100%;
         ul {
           display: flex;
           gap: 2rem;
@@ -26,6 +27,9 @@
             text-decoration: none;
             color: black;
             font-weight: 500;
+            font-family: "playfair display";
+            text-transform: uppercase;
+            letter-spacing:4px
           }
         }
       }
