--- a/portfolio/src/styles/carrousels.scss
+++ b/portfolio/src/styles/carrousels.scss
@@ -1,3 +1,6 @@
+@use './color' as *;
+
+/* ========== RESET STRUCTURE SLICK ========== */
 .slick-track {
   display: flex;
 }
@@ -9,61 +12,83 @@
   height: 100%;
 }
 
+
+/* ========== CONTAINER GÉNÉRAL ========== */
 .slider-container {
   display: flex;
   flex-direction: column;
-  position: relative;
   overflow: overlay;
   margin: 0 auto;
   max-width: 1200px;
-  
-  .slick-slider {
-    transition: transform 0.3s ease;
-    div {
-      padding: 1rem;
+}
+
+
+/* ========== SLIDER + CONTENU ========== */
+.slider-container .slick-slider {
+  transition: transform 0.3s ease;
+
+  div {
+    text-align: center;
+
+    h3 {
+      font-size: 1.2rem;
       text-align: center;
-
-      img {
-        width: 60%;
-        height: 80%;
-        object-fit: cover;
-        border-radius: 8px;
-        margin-top: 1rem;
-        transition: transform 0.5s ease;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      }
-
-      h3 {
-        font-size: 1.2rem;
-        text-align: center;
-      }
-
-      &:hover {
-        img {
-          transform: scale(1.05);
-        }
-      }
     }
-  }
 
-  .slick-dots {
-    display: flex;
-    li {
-      margin: 0 5px;
+    img {
+      width: 60%;
+      height: 80%;
+      object-fit: cover;
+      border-radius: 8px;
+      margin: 2.5rem 0 1.2rem 0;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      transition: transform 0.5s ease;
+    }
 
-      button {
-        border: none;
-        &:before {
-          font-size: 10px;
-          color: #888;
-        }
-      }
-
-      &.slick-active button:before {
-        color: #000;
-      }
+    &:hover img {
+      transform: scale(1.05);
     }
   }
 }
 
 
+/* ========== FLÈCHES DE NAVIGATION ========== */
+.slick-prev,
+.slick-next {
+  border: none;
+  background-color: $primary-color;
+  color: $text-color;
+  font-size: 2rem;
+  width: 15%;
+  cursor: pointer;
+  position: absolute;
+  left: -30px;
+
+  &:hover {
+    background-color: lighten($primary-color, 10%);
+  }
+}
+
+/* ========== POINTS / BULLETS ========== */
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+
+  li {
+    margin: 0 5px;
+
+    button {
+      border: none;
+
+      &::before {
+        font-size: 10px;
+        color: #888;
+      }
+    }
+
+    &.slick-active button::before {
+      color: #000;
+    }
+  }
+}
