--- a/portfolio/src/styles/projetDetail.scss
+++ b/portfolio/src/styles/projetDetail.scss
@@ -16,19 +16,27 @@
     background-color: $box-color;
 }
 
+#menu {
+    display: none;
+}
 .projet {
     .projet-detail {
     display: flex;
-    margin: 100px;
+    margin: 50px 100px;
     align-items: center;
     }
     .infoProjet {
         display: flex;
-        padding: 50px 0 0 80px;
+        padding: 0 0 0 6rem;
         gap: 20px;
         flex-direction: column;
         font-size: 20px;
-
+        h2 {
+            padding-bottom: 20px;
+        }
+        p {
+            letter-spacing: 0.8px;
+        }
         .tech {
             display: flex;
             flex-direction: column;
@@ -60,6 +68,7 @@
         line-height: 30px;
         p {
             text-align: justify;
+            letter-spacing: 0.8px;
         }
     }
 }
