--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -39,15 +39,27 @@
       }
       
       // Responsive : pour les petits écrans
-      @media screen and (max-width: 768px) {
-        .burger-btn {
-          display: block;
+
+      @media screen and (max-width: 1050px) {
+        a {
+          font-size: 12px;
         }
+      }
       
+      @media screen and (max-width: 768px) {
+        .logo {
+          width: 15%;
+        }
+        .burger-btn {
+          display: flex;
+          border: none;
+          margin: 20px 10px;
+          background-color: $primary-color;
+        }
         .menu {
           position: absolute;
-          top: 100%;
-          right: 1rem;
+          top: 4rem;
+          left: 4px;
           background-color: white;
           border-radius: 8px;
           box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -55,10 +67,14 @@
           flex-direction: column;
           padding: 1rem;
           z-index: 999;
+          width: 90%;
       
           ul {
             flex-direction: column;
             gap: 1rem;
+            li {
+              font-size: 12px;
+            }
           }
       
           &.open {
