--- a/portfolio/src/styles/main.scss
+++ b/portfolio/src/styles/main.scss
@@ -374,7 +374,7 @@
 }   
 @media screen and (max-width: 768px) {
     .skill-container {
-        margin: 1rem 2rem;
+        gap: 2rem;
         .cards-skills {
             font-size: 9px;
         }
