--- a/portfolio/src/styles/skills.scss
+++ b/portfolio/src/styles/skills.scss
@@ -28,13 +28,12 @@
             display: flex;
             justify-content: center;
             img {
-                width: 35%;
-                margin: 40px
+                width: 450px;
+                height: 450px;
             }
         }
     }
 }
-
 
 .softSkill {
     color: $text-color;
