--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -8,8 +8,11 @@
     font-size: 1.5rem;
 
     .logo {
-        width: 20%;
-        margin: 10px;
+      margin: 10px;
+      img {
+        width: 90%;
+        height: 70px;
+      }
     }
 
     .menu {
