update fleche blacktotop et msg carrrousel

--- a/portfolio/src/styles/main.scss
+++ b/portfolio/src/styles/main.scss
@@ -77,8 +77,8 @@ textarea {
 }
 
 // fleche scroll
-.contenair-main {
-    .back-to-top {
+.container-main {
+    #backToTop {
         position: fixed;
         bottom: 4rem;
         right: 20px;
