--- a/portfolio/src/styles/projetDetail.scss
+++ b/portfolio/src/styles/projetDetail.scss
@@ -6,7 +6,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+
+    .swipperImg {
+        position: relative;
+    
+        &:hover .indication {
+          display: block;
+        }
+    
+        .indication {
+          display: none;
+          position: absolute;
+          bottom: 10px;
+          left: 50%;
+          transform: translateX(-50%);
+          background: rgba(0, 0, 0, 0.7);
+          color: white;
+          padding: 5px 10px;
+          border-radius: 5px;
+          font-size: 0.9rem;
+          opacity: 0.5;
+        }
+      }
+   }
 
 .mySecondSwiper img {
     width: 100%; 
