update responsive projetdetail

--- a/portfolio/src/styles/projetDetail.scss
+++ b/portfolio/src/styles/projetDetail.scss
@@ -109,6 +109,7 @@
             .tech, .tech-competence{
                 ul {
                     padding: 0;
+                    margin: 0;
                 }
             }
         }
@@ -118,7 +119,7 @@
     .projet {
         .projet-detail{
             flex-direction: column;
-            margin: 0 50px 50px;
+            margin: 0 50px 30px;
             gap: 30px;
             .mySecondSwiper {
                 width: 200px;
@@ -126,6 +127,9 @@
             }
             .infoProjet {
                 padding: 0;
+                li {
+                    font-size: 16px;
+                }
                 h2 {
                     justify-content: center;
                     display: flex;
@@ -137,11 +141,11 @@
         }
     }
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 440px) {
     .projet {
         .projet-detail {
             flex-direction: column;
-            padding-top: 3rem;
+            padding-top: 2rem;
             margin: 0 32px;
             .mySecondSwiper {
             width: 200px;
