update details responsive

--- a/portfolio/src/styles/main.scss
+++ b/portfolio/src/styles/main.scss
@@ -98,7 +98,7 @@ textarea {
 }
 
 @media screen and (max-width: 780px){
-    .contenair-main .back-to-top {
+    .container-main #backToTop {
         display: none;
     }
 }
