--- a/portfolio/src/styles/carrousels.scss
+++ b/portfolio/src/styles/carrousels.scss
@@ -92,7 +92,22 @@
 }
 
 /* Responsive */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
+  .slick-prev,
+  .slick-next {
+    left: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .slider-container .slick-slider div {
+    h3 {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media screen and (max-width: 440px) {
   .slick-prev,
   .slick-next {
     left: 0;
@@ -106,4 +121,3 @@
     }
   }
 }
-
