--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -48,13 +48,10 @@
       }
       
       @media screen and (max-width: 768px) {
-        .logo {
-          width: 15%;
-        }
         .burger-btn {
           display: flex;
           border: none;
-          margin: 20px 10px;
+          margin: 15px 10px;
           background-color: $primary-color;
         }
         .menu {
@@ -81,6 +78,13 @@
           &.open {
             display: flex;
           }
+        }
+      }
+
+      @media screen and (max-width: 768px) {
+        .logo {
+          width: 70%;
+          height: 35px;
         }
       }
 }
