correction taille logo

--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -97,7 +97,7 @@
       }
 
       @media screen and (max-width: 768px) {
-        .logo {
+        .logo-lang-container .logo {
           width: 70%;
           height: 35px;
         }
