--- a/portfolio/src/styles/header.scss
+++ b/portfolio/src/styles/header.scss
@@ -98,7 +98,7 @@
 
       @media screen and (max-width: 768px) {
         .logo-lang-container .logo {
-          width: 70%;
+          width: 50px;
           height: 35px;
         }
       }
